adding assigment for not found and number format exception